button update with less hotlinks

--- a/html/index.html
+++ b/html/index.html
@@ -62,22 +62,31 @@
   </article>
   <article class="buttons">
     <a href="https://cyber.dabamos.de/88x31/">
-      <img src="https://cyber.dabamos.de/88x31/88x31.gif" alt="88x31 buttons">
+      <img src="/buttons/88x31.gif" alt="88x31 buttons">
     </a>
     <a href="https://web.archive.org/web/20141027160015/http://avdol.co.vu/post/91095908541">
-      <img src="https://cyber.dabamos.de/88x31/graphicdesign.gif" alt="graphic design is my passion">
-    </a>
-    <a href="https://yugoslavia.best/">
-      <img src="https://cyber.dabamos.de/88x31/blinchik.gif" alt="yugoslavia.best">
+      <img src="/buttons/graphicdesign.gif" alt="graphic design is my passion">
     </a>
     <a href="https://crouton.net/">
       <img src="/buttons/crouton.png" alt="crouton.net">
     </a>
+    <a href="./nahua-ref-sheet.html">
+      <img src="/buttons/paws.png" alt="made with my own two paws">
+    </a>
+    <a href="/nsfw">
+      <img src="/buttons/noclick.gif" alt="don't click">
+    </a>
     <a href="https://mykocalico.neocities.org/buttons">
-      <img src="https://64.media.tumblr.com/0d4db0b90d2cfee79a934ce56163a0b9/298a6b99507e35eb-e4/s100x200/397c38c3259c7bbb0143a3614646f348c9cb3b57.gif" alt="i was on cohost!">
+      <img src="/buttons/cohost.gif" alt="i was on cohost!">
+    </a>
+    <a href="https://www.noti.tg/">
+      <img src="/buttons/notitg.png" alt="noti.tg">
     </a>
     <a href="https://oat.zone/">
       <img src="https://oat.zone/badges/oatzone.gif" alt="oat.zone">
+    </a>
+    <a href="https://yugoslavia.best/">
+      <img src="/buttons/blinchik.gif" alt="yugoslavia.best">
     </a>
     <a href="https://goat.rest/">
       <img src="https://goat.rest/88x31-anim.gif" alt="read goat.rest">
@@ -123,6 +132,9 @@
     </a>
     <a href="https://matytoonistarchive.neocities.org/">
       <img src="https://matytoonistarchive.neocities.org/images/88by31button.gif" alt="matytoonistarchive.neocities.org">
+    </a>
+    <a href="https://starundrscre.neocities.org/">
+      <img src="https://starundrscre.neocities.org/assets/img/badges/starundrscre.png" alt="starundrscre.neocities.org">
     </a>
   </article>
   <article who="nahua" emotion="bashful">
