clarify hotlinking my button is okay

--- a/html/index.html
+++ b/html/index.html
@@ -143,7 +143,7 @@
     <textarea readonly>&lt;a href="https://spax.zone/"&gt;&lt;img src="https://spax.zone/buttons/spaxdotzone.gif"&gt;&lt;/a&gt;</textarea>
   </article>
   <article who="nahua" emotion="neutral">
-    (Hotlinking is okay)
+    (Hotlinking mine is okay)
   </article>
   <article who="nahua" emotion="look">
     (Also don't ask how I pronounced an image and HTML)
