add email to contacts

--- a/html/index.html
+++ b/html/index.html
@@ -212,7 +212,19 @@
     (I also have a very unflattering story relating to it).
   </article>
   <article who="nahua" emotion="happy">
-    Anyways, I believe those are all the socials I'm active on.
+    I also have an email! imstuff at spax dot zone.
+  </article>
+  <article who="nahua" emotion="disappointed">
+    (I would directly link it but web crawlers kinda suck ass).
+  </article>
+  <article who="nahua" emotion="look">
+    Right now it's actually cloudflare just forwarding the emails to a gmail account instead...
+  </article>
+  <article who="nahua" emotion="neutral">
+    But I'll set up the actual documents at some point so it can really be its own email.
+  </article>
+  <article who="nahua" emotion="happy">
+    Anyways, I believe those are all the socials I'm active on and places you can contact me.
   </article>
   <article who="nahua" emotion="neutral">
     If you missed the banner at the top of the page, <a href="./sitelist.html">here's a link to my full sitelist</a>
