bar for when the last update was

--- a/html/index.html
+++ b/html/index.html
@@ -236,5 +236,10 @@
   <article who="nahua" emotion="joyful">
     Stay tuned for updates!
   </article>
+  <article class="short">
+    (This page was last updated on November 26th, 2024)<br><br>
+    ((This section will be updated automatically at some point))<br><br>
+    (((Also don't click <a href="/nsfw">here</a>)))
+  </article>
 </body>
 </html>
