--- a/html/index.html
+++ b/html/index.html
@@ -136,6 +136,21 @@
     <a href="https://starundrscre.neocities.org/">
       <img src="https://starundrscre.neocities.org/assets/img/badges/starundrscre.png" alt="starundrscre.neocities.org">
     </a>
+    <a href="https://sharkboob.observer/">
+      <img src="https://sharkboob.observer/graphics/buttons/88x31.png" alt="sharkboob.observer">
+    </a>
+    <a href="https://reidlab.pink/">
+      <img src="https://reidlab.pink/88x31.gif" alt="reidlab.pink">
+    </a>
+    <a href="https://styx-os.org/">
+      <img src="https://content.styx-os.org/file/data/73f4itz6w6nnfrfplylx/PHID-FILE-hk3ea2rb7yafrut3hmle/styx-8831-rounded.gif" alt="styx-os.org">
+    </a>
+    <a href="https://lisanne.gay/">
+      <img src="https://lisanne.gay/88x31.gif" alt="lisanne.gay">
+    </a>
+    <a href="https://sudospective.net/">
+      <img src="https://sudospective.net/content/images/2023/07/subo-badge-1.png">
+    </a>
   </article>
   <article who="nahua" emotion="bashful">
     And don't forget to add my own button to your site!<br>
