forgot alt text for one of them (my ass CANNOT wait to git push)

--- a/html/index.html
+++ b/html/index.html
@@ -149,7 +149,7 @@
       <img src="https://lisanne.gay/88x31.gif" alt="lisanne.gay">
     </a>
     <a href="https://sudospective.net/">
-      <img src="https://sudospective.net/content/images/2023/07/subo-badge-1.png">
+      <img src="https://sudospective.net/content/images/2023/07/subo-badge-1.png" alt="sudospective.net">
     </a>
   </article>
   <article who="nahua" emotion="bashful">
