add galaxy and yhvr buttons

--- a/html/index.html
+++ b/html/index.html
@@ -91,6 +91,12 @@
     <a href="https://goat.rest/">
       <img src="https://goat.rest/88x31-anim.gif" alt="read goat.rest">
     </a>
+    <a href="https://yhvr.me/">
+      <img src="/buttons/yhvrdotme.gif" alt="yhvr.me">
+    </a>
+    <a href="https://galaxy.click/">
+      <img src="/buttons/galaxydotclick.png" alt="galaxy.click">
+    </a>
     <a href="https://mayf.pink/">
       <img src="https://mayf.pink/data/main/buttons/__mayf.gif" alt="mayf.pink">
     </a>
