yoooo gender 2 just dropped

--- a/html/sitelist.html
+++ b/html/sitelist.html
@@ -27,6 +27,10 @@
       The ref sheet of my OC, Nahua!
     </article>
     <article>
+      <a href="./gender.html">My Gender</a><br>
+      A blogpost about my recent gender crisis! Skip to the bottom if you don't want to read a lot of text.
+    </article>
+    <article>
       <a href="/tests/ratspin/index.html">Rat Spin</a><br>
       Watch the rat spin to the freebird solo!!
     </article>
