add a note that I don't consider myself as trans

--- a/html/gender.html
+++ b/html/gender.html
@@ -103,7 +103,8 @@
     Anyways, that's my story. I identify as bigender (having two genders): cis male irl, and non-binary online.
   </article>
   <article who="nahua" emotion="neutral">
-    I go by he/they for both of them, but if I know you well, you can optionally use she/her for me online.
+    I go by he/they for both of them, but if I know you well, you can optionally use she/her for me online.<br>
+    And I don't believe I'll be identifying as trans.
   </article>
   <article who="nahua" emotion="bashful">
     Thank you so much for reading! I hope sharing my journey can help others figure out theirs as well!
