fix thansgiving typo

--- a/html/gender.html
+++ b/html/gender.html
@@ -97,7 +97,7 @@
     After this label materialized in front of me, I shared my live experience of this gender crisis on Bluesky (in an arguably comical manner). It was a mix of sorta-reasoning, panicking, coping mechanisms, more sorta-reasoning, et cetera. It was a lot of panicking though haha. I went through the rest of that day coming to terms with this new label I never thought I'd identify with.
   </article>
   <article who="nahua" emotion="look">
-    It's also worth mentioning that the rest of that day also happened to be extremely stressful for many in-real-life reasons (travelling for Thansgiving). I would not recommend having a gender crisis right before you do last-minute packing and ironing out logistics.
+    It's also worth mentioning that the rest of that day also happened to be extremely stressful for many in-real-life reasons (travelling for Thanksgiving). I would not recommend having a gender crisis right before you do last-minute packing and ironing out logistics.
   </article>
   <article who="nahua" emotion="bashful" id="jump-to-me-if-you-are-gay">
     Anyways, that's my story. I identify as bigender (having two genders): cis male irl, and non-binary online.
