"accurate" body class, more readable text otherwise

--- a/html/DEPalldialogue.html
+++ b/html/DEPalldialogue.html
@@ -6,4 +6,4 @@
   <link rel="stylesheet" href="/css/experimental.css" type="text/css">
   <!-- hey! if you wanna see how this site gets built, check out spax.zone/js/buildDEPdialogue.js -->
 </head>
-<body class="threads pre"></body></html>
+<body class="threads pre accurate"></body></html>
