--- a/html/gender.html
+++ b/html/gender.html
@@ -12,9 +12,11 @@
   <article who="nahua" emotion="look">
     I still need to figure out the quirks of writing a blogpost in this textbox format, so forgive me for it looking like this right now.
   </article>
+  <!--commenting out this part because I didn't fucking realize it was my scrollbar that was the culprit of this. i am dying
   <article who="nahua" emotion="angry">
     (Unrelated but I found out all the textboxes were 8 pixels too far to the right so now that's fixed. Thanks css.)
   </article>
+  -->
   <article who="nahua" emotion="neutral">
     Anyways, to the topic at hand. If you want to skip all the backstory and context nonsense and just get the TL;DR, jump to <a href="#jump-to-me-if-you-are-gay">here</a>.
   </article>
@@ -34,7 +36,7 @@
     Those are among the things I asked myself as I kept learning. <span style="opacity:0.3;">(also very thematic use of my old character sprites wow i'm so clever)</span>
   </article>
   <article who="nahua" emotion="bashful">
-    I actually considered being non-binary for a short period of time!<br><br><span style="opacity:0.05;">*cough* *cough* foreshadowing *cough* *cough*</span>
+    I actually considered being non-binary for a short period of time! <span style="opacity:0.1;">*cough* *cough* foreshadowing *cough* *cough*</span>
   </article>
   <article who="nahua" emotion="look">
     After the summer was over though and I became less active in that server, I ultimately came to the conclusion that I was okay with being a cisgender male, and had no real intention to identify as something else.
