update links to not have "here"s

--- a/html/gender.html
+++ b/html/gender.html
@@ -18,7 +18,7 @@
   </article>
   -->
   <article who="nahua" emotion="neutral">
-    Anyways, to the topic at hand. If you want to skip all the backstory and context nonsense and just get the TL;DR, jump to <a href="#jump-to-me-if-you-are-gay">here</a>.
+    Anyways, to the topic at hand. If you want you can <a href="#jump-to-me-if-you-are-gay">skip all the backstory</a> and context nonsense.
   </article>
   <article who="nahua" emotion="look">
     To give a bit of backstory, I first had unrestricted internet in early 2020, when covid happened.
@@ -115,7 +115,7 @@
     I'd like to thank <a href="https://marbelynrye.000.pe/">marbelynrye</a>, <a href="https://bsky.app/profile/oolie.bsky.social">Oolie</a>, <a href="https://wavebeem.com/">Sage</a>, and <a href="https://bsky.app/profile/rangal.bsky.social">Rangal</a> for either helping me talk through my feelings, or calling me a girl (the catalyst to this whole thing).
   </article>
   <article who="nahua" emotion="neutral">
-    You can head back to the main page <a href="./index.html">here</a>, but otherwise, take care!
+    You can <a href="./index.html">head back to the main page</a>, but otherwise, take care!
   </article>
   <article class="short">
     Originally written on November 28th, 2024
