--- a/html/sitelist.html
+++ b/html/sitelist.html
@@ -34,6 +34,10 @@
       <a href="/tests/ratspin/index.html">Rat Spin</a><br>
       Watch the rat spin to the freebird solo!!
     </article>
+    <article>
+      <a href="/tests/webfishing-drunk/index.html">WEBFISHING Drunk Text Generator</a><br>
+      Webfishing's drunk text generation for when you're not playing webfishing!
+    </article>
     <!--
     <article>
       <a href="./isspaxatschool.html">Is Spax At School?</a><br>
