--- a/tests/webfishing-drunk/index.html
+++ b/tests/webfishing-drunk/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>WEBFISHING Drunk Text Generator</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="./styles.css">
   <noscript>
     <style>
@@ -36,7 +37,7 @@
     made by <a href="/">Spax</a><br>
     drunk text generation and webfishing assets originally by lamedev<br>
     <a href="https://spax.zone/repo/tests/webfishing-drunk/">see the source</a><br>
-    v1.0.1
+    v1.0.2
   </footer>
   <!--options coming soon: disable UI drunk text, drunk UI (bobbing up and down), no instant generation (have button), ensure X many drunk permutations (max of 5-10 retries), markdown sanitization-->
 </body>
