update oolie's bluesky link

--- a/html/gender.html
+++ b/html/gender.html
@@ -112,7 +112,7 @@
     Thank you so much for reading! I hope sharing my journey can help others figure out theirs as well!
   </article>
   <article who="nahua" emotion="happy">
-    I'd like to thank <a href="https://marbelynrye.000.pe/">marbelynrye</a>, <a href="https://bsky.app/profile/oolie.bsky.social">Oolie</a>, <a href="https://wavebeem.com/">Sage</a>, and <a href="https://bsky.app/profile/rangal.bsky.social">Rangal</a> for either helping me talk through my feelings, or calling me a girl (the catalyst to this whole thing).
+    I'd like to thank <a href="https://marbelynrye.000.pe/">marbelynrye</a>, <a href="https://bsky.app/profile/oolie.fish">Oolie</a>, <a href="https://wavebeem.com/">Sage</a>, and <a href="https://bsky.app/profile/rangal.bsky.social">Rangal</a> for either helping me talk through my feelings, or calling me a girl (the catalyst to this whole thing).
   </article>
   <article who="nahua" emotion="neutral">
     You can <a href="./index.html">head back to the main page</a>, but otherwise, take care!
