small index changes

--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
   </style>
 </head>
 <body>
-  <article>
+  <article id="top">
     <a href="./sitelist.html">Click here</a> to see my full site list!<br>
     -Spax
   </article>
@@ -38,7 +38,7 @@
   <article who="nahua" emotion="neutral">
     Speaking of...
   </article>
-  <article who="nahua" emotion="joyful">
+  <article who="nahua" emotion="joyful" id="webrings">
     I've joined some webrings!
   </article>
   <article id="mcai-webring" class="webring centertext short">
@@ -60,7 +60,7 @@
   <article who="nahua" emotion="neutral">
     I've also linked some 88x31 buttons for my friends' sites and other miscellaneous things.
   </article>
-  <article class="buttons">
+  <article class="buttons" id="buttons">
     <a href="https://cyber.dabamos.de/88x31/">
       <img src="/buttons/88x31.gif" alt="88x31 buttons">
     </a>
@@ -70,11 +70,14 @@
     <a href="https://crouton.net/">
       <img src="/buttons/crouton.png" alt="crouton.net">
     </a>
+    <a href="https://bigrat.monster/">
+      <img href="/buttons/bigratdotmonster.png" alt="bigrat.monster">
+    </a>
     <a href="./nahua-ref-sheet.html">
       <img src="/buttons/paws.png" alt="made with my own two paws">
     </a>
     <a href="/nsfw">
-      <img src="/buttons/noclick.gif" alt="don't click">
+      <img src="/buttons/noclick.gif" alt="don't click" title="you will regret this">
     </a>
     <a href="https://mykocalico.neocities.org/buttons">
       <img src="/buttons/cohost.gif" alt="i was on cohost!">
@@ -88,6 +91,9 @@
     <a href="https://yugoslavia.best/">
       <img src="/buttons/blinchik.gif" alt="yugoslavia.best">
     </a>
+    <a href="https://mayf.pink/">
+      <img src="https://mayf.pink/data/main/buttons/__mayf.gif" alt="mayf.pink">
+    </a>
     <a href="https://goat.rest/">
       <img src="https://goat.rest/88x31-anim.gif" alt="read goat.rest">
     </a>
@@ -96,9 +102,6 @@
     </a>
     <a href="https://galaxy.click/">
       <img src="/buttons/galaxydotclick.png" alt="galaxy.click">
-    </a>
-    <a href="https://mayf.pink/">
-      <img src="https://mayf.pink/data/main/buttons/__mayf.gif" alt="mayf.pink">
     </a>
     <a href="https://icosahedr.online/">
       <img src="https://misc.icosahedr.online/trinket/sapbutton.gif" alt="icosahedr.online">
@@ -157,8 +160,11 @@
     <a href="https://sudospective.net/">
       <img src="https://sudospective.net/content/images/2023/07/subo-badge-1.png" alt="sudospective.net">
     </a>
+    <a href="https://meow-d.github.io/">
+      <img src="https://meow-d.github.io/assets/images/buttons/meow_d.webp" alt="meow-d.github.io">
+    </a>
   </article>
-  <article who="nahua" emotion="bashful">
+  <article who="nahua" emotion="bashful" id="spaxzone-button">
     And don't forget to add my own button to your site!<br>
     <a href="https://spax.zone/"><img src="https://spax.zone/buttons/spaxdotzone.gif"></a>
     <textarea readonly>&lt;a href="https://spax.zone/"&gt;&lt;img src="https://spax.zone/buttons/spaxdotzone.gif"&gt;&lt;/a&gt;</textarea>
@@ -180,23 +186,26 @@
   <article who="nahua" emotion="expressionless">
     Motivation is hard, and committing to the things is also hard, but I'll get there in the end.
   </article>
-  <article who="nahua" emotion="neutral">
+  <article who="nahua" emotion="neutral" id="socials">
     Regardless, I should probably link some of my socials on here.
   </article>
-  <article who="nahua" emotion="happy">
-    My Bluesky is (unsurprisingly) <a href="https://bsky.app/profile/spax.zone">spax.zone</a>.
+  <article who="nahua" emotion="happy" id="bluesky">
+    My Bluesky is (unsurprisingly) <a href="https://bsky.app/profile/spax.zone" target="_blank">@spax.zone</a>.
   </article>
   <article who="nahua" emotion="joyful">
-    I've been using it a lot! Mostly shitposting my dumb thoughts and reposting cool stuff.
+    I've been using it a lot!
   </article>
   <article who="nahua" emotion="neutral">
-    As well as interacting with some of my mutuals.
+    Mostly shitposting my dumb thoughts and reposting cool stuff, as well as interacting with some of my mutuals.
   </article>
-  <article who="nahua" emotion="joyful">
+  <article who="nahua" emotion="bashful">
     (I follow back if I know you!)
   </article>
-  <article who="nahua" emotion="happy">
-    My Mastodon/Fediverse is <a href="https://furry.engineer/@spax">@spax@furry.engineer</a>.
+  <article who="nahua" emotion="look">
+    (Or if I think you're cool)
+  </article>
+  <article who="nahua" emotion="happy" id="mastodon">
+    My Mastodon/Fediverse is <a href="https://furry.engineer/@spax" target="_blank">@spax@furry.engineer</a>.
   </article>
   <article who="nahua" emotion="neutral">
     The domain is really funny, which is why I'm sticking with it.
@@ -204,35 +213,38 @@
   <article who="nahua" emotion="look">
     I don't use it too often, though.
   </article>
-  <article who="nahua" emotion="happy">
-    My Discord (the most active platform I'm on) is <a href="https://discord.com/users/545395873891483662">@spaxolotl</a>.
+  <article who="nahua" emotion="happy" id="discord">
+    My Discord (the most active platform I'm on) is <a href="https://discord.com/users/545395873891483662" target="_blank">@spaxolotl</a>.
   </article>
   <article who="nahua" emotion="look">
-    I am unfortunately at the friend limit though: 1000 friends.
+    I am unfortunately at the friend limit though: 1000
   </article>
   <article who="nahua" emotion="sus">
-    (Thanks, Discord).
+    (Thanks, Discord)
   </article>
   <article who="nahua" emotion="expressionless">
-    You can still join my Discord server <a href="https://discord.gg/the-spinning-rat-cult-1001605562498297966">here</a>.
-    Like I said earlier, it needs a restructuring, but if you just want to contact me,
+    You can still <a href="https://discord.gg/the-spinning-rat-cult-1001605562498297966" target="_blank">join my Discord server</a>,
+    but like I said earlier, it needs a restructuring. If you just want to contact me though,
     this should be your best bet.
   </article>
   <article who="nahua" emotion="look">
-    (If the DoubleCounter bot gives you issues during verification, just DM me or a mod and mention that you came from my site).
+    (If the bot gives you issues during verification, just DM me or a mod and mention that you came from my site).
   </article>
-  <article who="nahua" emotion="happy">
-    I also have a Signal! My username there is spax.01, and my chats expire after a week by default.
+  <article who="nahua" emotion="happy" id="signal">
+    I also have a Signal! My username there is <span class="underline">spax.01</span>, and my chats expire after a week by default.
   </article>
-  <article who="nahua" emotion="expressionless">
-    I uh, used to have a <a href="https://cohost.org">Cohost</a>, but the site is
+  <article who="nahua" emotion="expressionless" id="cohost">
+    I uh, used to have a <a href="https://cohost.org" target="_blank">Cohost</a>, but the site is
     shutting down at the end of the year and is currently in a read-only mode,
     so no real use linking that.
   </article>
-  <article who="nahua" emotion="nervous">
+  <!--<article who="nahua" emotion="nervous">
     (I also have a very unflattering story relating to it).
+  </article>-->
+  <article who="nahua" emotion="pensive">
+    Eggbug forever.
   </article>
-  <article who="nahua" emotion="happy">
+  <article who="nahua" emotion="happy" id="email">
     I also have an email! imstuff at spax dot zone.
   </article>
   <article who="nahua" emotion="disappointed">
@@ -252,15 +264,13 @@
     if you wanna see more stuff I've made/written.
   </article>
   <article who="nahua" emotion="bashful">
-    Thank you for visiting my site! It means a lot that you've read the whole thing.
-  </article>
-  <article who="nahua" emotion="joyful">
+    Thank you for visiting my site! It means a lot that you've read the whole thing.<br>
     Stay tuned for updates!
   </article>
   <article class="short">
-    (This page was last updated on November 26th, 2024)<br><br>
+    (This page was last updated on December 6th, 2024)<br><br>
     ((This section will be updated automatically at some point))<br><br>
-    (((Also don't click <a href="/nsfw">here</a>)))
+    (((Also don't click <a href="/nsfw" target="_blank">here</a>)))
   </article>
 </body>
 </html>
