src instead of href omg

--- a/html/index.html
+++ b/html/index.html
@@ -71,7 +71,7 @@
       <img src="/buttons/crouton.png" alt="crouton.net">
     </a>
     <a href="https://bigrat.monster/">
-      <img href="/buttons/bigratdotmonster.png" alt="bigrat.monster">
+      <img src="/buttons/bigratdotmonster.png" alt="bigrat.monster">
     </a>
     <a href="./nahua-ref-sheet.html">
       <img src="/buttons/paws.png" alt="made with my own two paws">
