wording changes for gender and hover text stuff

--- a/html/gender.html
+++ b/html/gender.html
@@ -6,6 +6,9 @@
   <link rel="stylesheet" href="/css/experimental.css">
 </head>
 <body data-content="blog">
+  <article class="short">
+    Originally written on November 28th, 2024
+  </article>
   <article who="nahua" emotion="neutral">
     Hey, Spax here.
   </article>
@@ -18,13 +21,13 @@
   </article>
   -->
   <article who="nahua" emotion="neutral">
-    Anyways, to the topic at hand. If you want you can <a href="#jump-to-me-if-you-are-gay">skip all the backstory</a> and context nonsense.
+    Anyways, to the topic at hand. If you want you can <a href="#jump-to-me-if-you-are-gay">skip all the backstory</a> and context nonsense. This is about a x minute read.
   </article>
   <article who="nahua" emotion="look">
     To give a bit of backstory, I first had unrestricted internet in early 2020, when covid happened.
   </article>
   <article who="nahua" emotion="happy">
-    I ended up joining a Discord server for trans folks (I do not remember why), and thus began my journey into the LGBTQ.
+    I ended up joining a Discord server for trans folks (I do not remember why), and thus began my journey into the LGBTQ community.
   </article>
   <article who="nahua" emotion="neutral">
     I learned a lot about the culture and common practices. Transitioning, gender euphoria, all the ways a person can identify their gender and their expression of it, being an "egg", and the political nature of all this, alongside many more things. As a 14 year old at the time, a lot of this information was pretty revolutionary to me.
@@ -45,7 +48,10 @@
     For the next year, I dealt with a different identity crisis: that being "am I a furry".
   </article>
   <article who="nahua" emotion="confused">
-    I don't fully remember how I found out what furries were, but I think I understood them through internet osmosis when I was in the trans server. It was just constant "does liking this stuff make me a furry?" for a year. I fully accepted being one when I found it funny to tell some people who I went on a camping trip with in the summer of 2021.
+    I don't fully remember how I found out what furries were, but I think I understood them through internet osmosis when I was in the trans server. It was just constant "does liking this stuff make me a furry?" for a year.
+  </article>
+  <article who="nahua" emotion="neutral">
+    I fully accepted being one when I found it funny to tell some people who I went on a camping trip with in the summer of 2021.
   </article>
   <article who="nahua" emotion="look">
     It is also worth noting that I'm still a bit ashamed at being a furry, and only tell my closest in-person friends.
@@ -60,7 +66,7 @@
     Now fast-forward to the year 2024, four years with unrestricted internet. I've finally turned 18, and was able to unlock a whole new section of the internet.
   </article>
   <article who="nahua" emotion="disappointed">
-    Being a minor on the internet is not the most fun experience. There's always a risk of predators, you can't use transfer money very easily, and half of the people on social media don't even want to interact with you because they don't like the way kids act. Not to mention you aren't really allowed to explore your sexuality until you've reached "that age". All discussion of this with responsible adults online is considered taboo (and for good reason!, but it's still unfortunate as I had little-to-no resources to grapple the feelings with).
+    Being a minor on the internet is not the most fun experience. There's always a risk of predators, you can't use transfer money very easily, and half of the people on social media don't even want to interact with you because they don't like the way kids act. Not to mention you aren't really allowed to explore your sexuality until you've reached "that age". All discussion of this with responsible adults online is considered taboo (and for good reason!, but it's still unfortunate as I had little-to-no resources to help guide me through my feelings).
   </article>
   <article who="nahua" emotion="expressionless">
     This also ties in with another publicly taboo subject: porn, and an even more taboo one: the consumption of porn as a minor. This is still a touchy subject for me, and since this *is* a publicly accessible website, I also want to be vague for that reason too.
@@ -69,7 +75,7 @@
     So with the knowledge that I did have some access to porn as a minor, I had no choice but to have a private sex life. I was ashamed to have one in the first place, and I didn't want to give anyone the opportunity to fuck up my life by sharing what I had been doing. I actually identified as aromantic and asexual in an attempt to just label myself something innocuous and moving on.
   </article>
   <article who="nahua" emotion="disappointed">
-    Since then, I've learned that viewing porn is a relatively common thing for minors to do, so I've found a bit of comfort knowing that I wasn't alone. Regardless, to this day, I still keep my sex life private, and have no plans to create "after dark" or nsfw social media accounts.
+    Since then, I've learned that viewing porn is a relatively common thing for minors to do, so I've found a bit of comfort knowing that I wasn't alone. Regardless, to this day, I still keep my sex life private, and have no plans to create "after dark" or "not safe for work" social media accounts.
   </article>
   <article who="nahua" emotion="nervous">
     With that unavoidably serious topic out of the way, you can imagine that four years of repressed emotions and being too scared to share them with any living soul, really does have its consequences!
@@ -84,28 +90,32 @@
     And after this had happened a few times literally in the span of days, in a casual conversation I asked one of them why she called me that. She said she thought it was funny (it was) but the way it kept making me feel was different from how I normally felt.
   </article>
   <article who="nahua" emotion="look">
-    I mentioned that I am like, the least feminine person in real life, and that I don't even *want* to be feminine in real life, to which she said that she believed I was non-binary.
+    I mentioned that I am like, the least feminine person in real life, and that I don't even *want* to be feminine in real life, to which she said that she believed I was actually non-binary, and was a bit surprised.
   </article>
   <article who="nahua" emotion="expressionless">
-    This broke my brain a bit. I immediately thought to myself "how can I be non-binary? I'm fine with being cis male. But why did being called a girl make me feel nice??" In this moment, I was grappling with my self-imposed belief that these two ideas were mutually exclusive. You could not have two gender identities.
+    This broke my brain a bit. I immediately thought to myself "how can I be non-binary? I'm fine with being cis male. But why did being called a girl make me feel nice??" In this moment, I was grappling with my self-imposed belief that these two ideas were mutually exclusive:<br>
+    You could not have two gender identities.
   </article>
   <article>
-    ...Until I then came to the realization, "...why can't I be both? What's preventing me from being both?" I already had two identities: A tangible, real-life one where I'm just a nerdy dude, and a digital, unrestricted one where I'm an *anthropomorphic axolotl* who's a nerdy dude. I present myself differently for each, and the two live separately in my head. Sure, they interact and influence each other, but they are distinct, and I had already made this clear to myself. So what was stopping me from applying the same logic to my gender identity? Can I not have one gender identity for my physical self and another for my digital self?
+    ...Until I then came to the realization, "...why can't I be both? What's preventing me from being both?" I already had two identities: A tangible, real-life one where I'm just a nerdy dude, and a digital, unrestricted one where I'm an <i>anthropomorphic axolotl</i> who's a nerdy dude. I present myself differently for each, and the two live separately in my head. Sure, they interact and influence each other, but they are distinct, and I had already made this clear to myself. So what was stopping me from applying the same logic to my gender identity? Can I not have one gender identity for my physical self and another for my digital self?
   </article>
   <article>
-    I then remembered a term I had learned of at some point: bigender. The prefix "bi-", meaning "two", and gender being gender. Two genders. This entire train of thought took a few minutes to fully reach the conclusion that I might identify as bigender. Remember when I said I hadn't critically thought about my gender since 2020? Combine that with years of emotional repression of shame for identifying as a furry and being unable to explore or process my sexuality, and you get me freaking the FUCK out about this unforseen gender crisis. I had never felt more trans in my life, and I can now sympathise with others who went through their own crises.
+    I then remembered a term I had learned of at some point: bigender. The prefix "bi-", meaning "two", and gender being gender. Two genders. This entire train of thought took a few minutes to fully reach the conclusion that I might identify as bigender. Remember when I said I hadn't critically thought about my gender since 2020? Combine that with years of emotional repression from shame for identifying as a furry and being unable to explore or process my sexuality, and you get me freaking the FUCK out about this unforseen gender crisis. I had never felt more trans in my life, and I can now sympathise with others who went through their own crises.
   </article>
   <article who="nahua" emotion="neutral">
-    After this label materialized in front of me, I shared my live experience of this gender crisis on Bluesky (in an arguably comical manner). It was a mix of sorta-reasoning, panicking, coping mechanisms, more sorta-reasoning, et cetera. It was a lot of panicking though haha. I went through the rest of that day coming to terms with this new label I never thought I'd identify with.
+    After this label materialized in front of me, I shared my live experience of this gender crisis on Bluesky (in an arguably comical manner). It was a mix of sorta-reasoning, panicking, coping mechanisms, more sorta-reasoning, et cetera. It was a lot of panicking though, haha! I went through the rest of that day coming to terms with this new label I never thought I'd identify with.
   </article>
   <article who="nahua" emotion="look">
-    It's also worth mentioning that the rest of that day also happened to be extremely stressful for many in-real-life reasons (travelling for Thanksgiving). I would not recommend having a gender crisis right before you do last-minute packing and ironing out logistics.
+    It's also worth mentioning that the rest of that day also happened to be extremely stressful for many in-real-life reasons (that being traveling for Thanksgiving). I would not recommend having a gender crisis right before you do last-minute packing and ironing out logistics.
   </article>
-  <article who="nahua" emotion="bashful" id="jump-to-me-if-you-are-gay">
-    Anyways, that's my story. I identify as bigender (having two genders): cis male irl, and non-binary online.
+  <article who="nahua" emotion="joyful" id="jump-to-me-if-you-are-gay">
+    Anyways, that's my story!
   </article>
-  <article who="nahua" emotion="neutral">
-    I go by he/they for both of them, but if I know you well, you can optionally use she/her for me online.<br>
+  <article who="nahua" emotion="bashful" id="gender">
+    I identify as bigender (having two genders): cis male irl, and non-binary online.
+  </article>
+  <article who="nahua" emotion="neutral" id="pronouns">
+    I go by <em hover="he/him or they/them">he/they</em> for both of them, but if I know you well, you can optionally use <em>she/her</em> for me online.<br>
     And I don't believe I'll be identifying as trans.
   </article>
   <article who="nahua" emotion="bashful">
@@ -116,9 +126,6 @@
   </article>
   <article who="nahua" emotion="neutral">
     You can <a href="./index.html">head back to the main page</a>, but otherwise, take care!
-  </article>
-  <article class="short">
-    Originally written on November 28th, 2024
   </article>
 </body>
 </html>
