--- a/html/index.html
+++ b/html/index.html
@@ -42,7 +42,7 @@
     I've joined some webrings!
   </article>
   <article id="mcai-webring" class="webring centertext short">
-    part of the <span title="man, computers are incredible">m,cai</span> webring<br><br>
+    part of the <span hover="man, computers are incredible">m,cai</span> webring<br><br>
     <a href="https://coolstation.space/" class="nowrap">&lt;-</a> <a href="https://terezi.pyrope.net/ring">everyone</a> <a href="https://marbelynrye.000.pe/" class="nowrap">-&gt;</a>
   </article>
   <article id="muoring" class="webring centertext short">
@@ -77,7 +77,7 @@
       <img src="/buttons/paws.png" alt="made with my own two paws">
     </a>
     <a href="/nsfw">
-      <img src="/buttons/noclick.gif" alt="don't click" title="you will regret this">
+      <img src="/buttons/noclick.gif" alt="don't click" hover="you will regret this">
     </a>
     <a href="https://mykocalico.neocities.org/buttons">
       <img src="/buttons/cohost.gif" alt="i was on cohost!">
