--- a/html/nahua-ref-sheet.html
+++ b/html/nahua-ref-sheet.html
@@ -58,7 +58,7 @@
       <span id="clarifications-header">!! Scroll down for clarifications !!</span>
       <div id="refcontainer">
         <img src="/images/art/nahua-bananas-refsheet.png" alt="Reference sheet for Nahua (Na-hoo-wa), a light blue axolotl with dark blue, yellow, and orange accents. She's shown from the front (both clothed and nude) and back; she looks cheery in the clothed picture and flustered in the nude one, which is censored with an eye-popping smiley. She's wearing shorts, kneesocks, a tanktop with an up arrow on it, and headphones. She is 5 feet 3 inches (160 centimeters) tall, 19 years old, and uses she/they pronouns. Design notes: Always wears headphones or ear-coverings (she looks weird without them); doesn't wear furs (they stick uncomfortably to the mucus on her skin); yellow eyelash-things are optional, but iconic; as an amphibian, she doesn't have breasts; hair is made out of kelp or something, IDK, go wild; has minor transformative powers (lore).">
-        <div id="ayo" title="ayo what you doin over there"></div>
+        <div id="ayo" hover="ayo what you doin over there"></div>
       </div>
       Artist: 1LikeBananas<br>
       Alt text: <a href="https://goatygoats.com/">Goaty Goats</a><br>
