forgot to fill in the x minute read thing

--- a/html/gender.html
+++ b/html/gender.html
@@ -21,7 +21,7 @@
   </article>
   -->
   <article who="nahua" emotion="neutral">
-    Anyways, to the topic at hand. If you want you can <a href="#jump-to-me-if-you-are-gay">skip all the backstory</a> and context nonsense. This is about a x minute read.
+    Anyways, to the topic at hand. If you want you can <a href="#jump-to-me-if-you-are-gay">skip all the backstory</a> and context nonsense. This is about an 8 minute read.
   </article>
   <article who="nahua" emotion="look">
     To give a bit of backstory, I first had unrestricted internet in early 2020, when covid happened.
