get rid of the "idk how to blog" stuff lol

--- a/html/gender.html
+++ b/html/gender.html
@@ -13,7 +13,7 @@
     Hey, Spax here.
   </article>
   <article who="nahua" emotion="look">
-    I still need to figure out the quirks of writing a blogpost in this textbox format, so forgive me for it looking like this right now.
+    This is a small impromptu blogpost about my gender.
   </article>
   <!--commenting out this part because I didn't fucking realize it was my scrollbar that was the culprit of this. i am dying
   <article who="nahua" emotion="angry">
@@ -21,7 +21,7 @@
   </article>
   -->
   <article who="nahua" emotion="neutral">
-    Anyways, to the topic at hand. If you want you can <a href="#jump-to-me-if-you-are-gay">skip all the backstory</a> and context nonsense. This is about an 8 minute read.
+    If you want you can <a href="#jump-to-me-if-you-are-gay">skip all the backstory</a> and context nonsense. This is about an 8 minute read.
   </article>
   <article who="nahua" emotion="look">
     To give a bit of backstory, I first had unrestricted internet in early 2020, when covid happened.
