--- a/html/gender.html
+++ b/html/gender.html
@@ -12,7 +12,7 @@
   <article who="nahua" emotion="neutral">
     Hey, Spax here.
   </article>
-  <article who="nahua" emotion="look">
+  <article who="nahua" emotion="bashful">
     This is a small impromptu blogpost about my gender.
   </article>
   <!--commenting out this part because I didn't fucking realize it was my scrollbar that was the culprit of this. i am dying
@@ -21,7 +21,7 @@
   </article>
   -->
   <article who="nahua" emotion="neutral">
-    If you want you can <a href="#jump-to-me-if-you-are-gay">skip all the backstory</a> and context nonsense. This is about an 8 minute read.
+    If you want you can <a href="#jump-to-me-if-you-are-gay">skip all the backstory</a> and context nonsense if you just want to find out what I identify as, as well as my pronouns. Otherwise, this is about an <em>8 minute</em> read.
   </article>
   <article who="nahua" emotion="look">
     To give a bit of backstory, I first had unrestricted internet in early 2020, when covid happened.
