another small update to the wording

--- a/html/gender.html
+++ b/html/gender.html
@@ -90,7 +90,7 @@
     And after this had happened a few times literally in the span of days, in a casual conversation I asked one of them why she called me that. She said she thought it was funny (it was) but the way it kept making me feel was different from how I normally felt.
   </article>
   <article who="nahua" emotion="look">
-    I mentioned that I am like, the least feminine person in real life, and that I don't even *want* to be feminine in real life, to which she said that she believed I was actually non-binary, and was a bit surprised.
+    I mentioned that I am like, the least feminine person in real life, and that I don't even *want* to be feminine in real life, to which she said that she believed I was actually non-binary, and was a bit surprised at the knowledge I'm not. But for a moment, for the first time in a long time, I considered maybe being non-binary.
   </article>
   <article who="nahua" emotion="expressionless">
     This broke my brain a bit. I immediately thought to myself "how can I be non-binary? I'm fine with being cis male. But why did being called a girl make me feel nice??" In this moment, I was grappling with my self-imposed belief that these two ideas were mutually exclusive:<br>
