fucking. one expression change

--- a/html/2024.html
+++ b/html/2024.html
@@ -216,7 +216,7 @@
     <article who="nahua" emotion="dizzy">
       Anyways, christ what a stream-of-thought blogpost.
     </article>
-    <article who="nahua" emotion="neutral">
+    <article who="nahua" emotion="bashful">
       Thank you so much for reading it! I'll probably go back and edit it so it's more concise in the future but I really want to get this out before January 1st 2025 in my timezone.
     </article>
     <article who="nahua" emotion="neutral">
